--- a/style/style.css
+++ b/style/style.css
@@ -14,11 +14,8 @@ body{
 }
 
 body{
-    background-image: url(../imagens/fundo-madeira.jpg);
-    background-repeat: no-repeat;
-    background-position: top center;
+    background: url(../imagens/fundo-madeira.jpg) no-repeat fixed top center ;
     background-size: cover;
-    background-attachment: fixed;
 }
 
 main{
@@ -34,8 +31,7 @@ section.telefone{
 
     height: 627px;
     width: 310px;
-    background-image: url(../imagens/frame-iphone.png);
-    background-repeat: no-repeat;
+    background: url(../imagens/frame-iphone.png) no-repeat;
 }
 
 iframe.tela{
