--- a/style/style.css
+++ b/style/style.css
@@ -41,3 +41,24 @@ iframe.tela{
     width: 267px;
     height: 471px;
 }
+
+section.redes_sociais{
+    text-align: right;
+}
+
+section.redes_sociais > a > img{
+    width: 50px;
+    height: 50px;
+    margin: 15px;
+    margin-left: 20px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.623);
+    box-sizing: border-box;
+}
+
+section.redes_sociais > a > img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.445);
+    transform: translate(-3px , -3px);
+    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.623);
+    transition: transform .3s, border 1s;
+}
